--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
          <div class="col-6">
            <img src="Maymay.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/>
            <button class="btn btn-primary" type=button" id="btn Like1"> Like </button>
-            <output id="countlikes1"></output>  
+            <output id="countlikes1">0</output>  
          </div>
          <div class="col-6">
            <img src="May.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/>
            <button class="btn btn-primary" type=button" id="btn Like2"> Like </button>
-            <output id="countlikes2"></output>  
+            <output id="countlikes2">0</output>  
          </div>
        </div>
      </div>
