--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
          <div class="col-6">
            <img src="Maymay.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/>
            <button class="btn btn-primary" type="button" id="btnLike1"> Like </button>
-            <button class="btn btn-primary" type="button" id="btnDisLike1"> DisLike </button>
+            <button class="btn btn-primary" type="button" id="btndisLike1"> disLike </button>
             <output id="countLikes1">0</output>  
-            <output id="countDisLikes1">0</output>  
+            <output id="countdisLikes1">0</output>  
          </div>
          <div class="col-6">
            <img src="May.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/>
            <button class="btn btn-primary" type="button" id="btnLike2"> Like </button>
-            <button class="btn btn-primary" type="button" id="btnDisLike2"> DisLike </button>
+            <button class="btn btn-primary" type="button" id="btndiskike2"> disLike </button>
             <output id="countLikes2">0</output>  
-            <output id="countDisLikes2">0</output>  
+            <output id="countdisLikes2">0</output>  
          </div>
        </div>
      </div>
