--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
          <div class="col-6">
            <img src="May.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/>
            <button class="btn btn-primary" type="button" id="btnLike2"> Like </button>
-            <button class="btn btn-primary" type="button" id="btndiskike2"> disLike </button>
+            <button class="btn btn-primary" type="button" id="btndisLike2"> disLike </button>
             <output id="countLikes2">0</output>  
             <output id="countdisLikes2">0</output>  
          </div>
