--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
        <div class="row">
          <div class="col-6">
            <img src="Maymay.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/>
-           <button class="btn btn-primary" type="button" id="btnLike1"> Like </button>
-            <button class="btn btn-primary" type="button" id="btnDisLike1"> DisLike </button>
-            <output id="countLike1">0</output>  
-            <output id="countDisLike1">0</output>  
+           <button class="btn btn-primary" type="button" id="btnLikes1"> Like </button>
+            <button class="btn btn-primary" type="button" id="btnDisLikes1"> DisLike </button>
+            <output id="countLikes1">0</output>  
+            <output id="countDisLikes1">0</output>  
          </div>
          <div class="col-6">
            <img src="May.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/>
-           <button class="btn btn-primary" type="button" id="btnLike2"> Like </button>
-            <button class="btn btn-primary" type="button" id="btnDisLike2"> DisLike </button>
-            <output id="countLike2">0</output>  
-            <output id="countDisLike2">0</output>  
+           <button class="btn btn-primary" type="button" id="btnLikes2"> Like </button>
+            <button class="btn btn-primary" type="button" id="btnDisLikes2"> DisLike </button>
+            <output id="countLikes2">0</output>  
+            <output id="countDisLikes2">0</output>  
          </div>
        </div>
      </div>
