--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
            <button class="btn btn-primary" type="button" id="btnLikes1"> Like </button>
             <button class="btn btn-primary" type="button" id="btnDisLikes1"> DisLike </button>
             <output id="countLikes1">0</output>  
-            <output id="countDisLikes1">0</output>  
+            <output id="countDisLike1">0</output>  
          </div>
          <div class="col-6">
            <img src="May.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/>
            <button class="btn btn-primary" type="button" id="btnLikes2"> Like </button>
             <button class="btn btn-primary" type="button" id="btnDisLikes2"> DisLike </button>
             <output id="countLikes2">0</output>  
-            <output id="countDisLikes2">0</output>  
+            <output id="countDisLike2">0</output>  
          </div>
        </div>
      </div>
