--- a/index.html
+++ b/index.html
@@ -8,21 +8,22 @@
      <div class="container">
        <div class="row">
          <div class="col-6">
-           <img src="Maymay.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/>
-           <button class="btn btn-primary" type="button" id="btnLikes1"> Like </button>
-            <button class="btn btn-primary" type="button" id="btnDisLike1"> DisLike </button>
-            <output id="countLikes1">0</output>  
-            <output id="countDisLike1">0</output>  
+           <img src="1.jpg" class="May.jpeg" style="width:400px;height:500px;"/><br>
+           <button class="btn btn-primary" type="button" id="btnLike1"> Like </button>
+              <output id="countLikes1">0</output>
+		<button class="btn btn-primary" type="button" id="btndisLike1"> DisLike </button>
+		<output id="countdisLikes1">0</output>
          </div>
          <div class="col-6">
-           <img src="May.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/>
-           <button class="btn btn-primary" type="button" id="btnLikes2"> Like </button>
-            <button class="btn btn-primary" type="button" id="btnDisLike2"> DisLike </button>
-            <output id="countLikes2">0</output>  
-            <output id="countDisLike2">0</output>  
-         </div>
-       </div>
+           <img src="2.jpg" class="Maymay.jpeg" style="width:400px;height:500px;"/><br>
+           <button class="btn btn-primary" type="button" id="btnLike2">  Like </button>
+              <output id="countLikes2">0</output>
+		<button class="btn btn-primary" type="button" id="btndisLike2"> DisLike </button>
+		<output id="countdisLikes2">0</output>
+            </div>
+        </div>
      </div>
       <script src="index.js"></script>
    </body>
- 
+</html>
+cdn.jsdelivr.net
