--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
      <div class="container">
        <div class="row">
          <div class="col-6">
-           <img src="1.jpg" class="May.jpeg" style="width:400px;height:500px;"/><br>
+           <img src="May.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/><br>
            <button class="btn btn-primary" type="button" id="btnLike1"> Like </button>
               <output id="countLikes1">0</output>
 		<button class="btn btn-primary" type="button" id="btndisLike1"> DisLike </button>
 		<output id="countdisLikes1">0</output>
          </div>
          <div class="col-6">
-           <img src="2.jpg" class="Maymay.jpeg" style="width:400px;height:500px;"/><br>
+           <img src="Maymay.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/><br>
            <button class="btn btn-primary" type="button" id="btnLike2">  Like </button>
               <output id="countLikes2">0</output>
 		<button class="btn btn-primary" type="button" id="btndisLike2"> DisLike </button>
