--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 			     <input type="number" class="form-control border-0" id="total" readonly placeholder="Total"/>
 			     <input type="number" class="form-control id="cash" placeholder="Cash Tendered"/>
 			     <input type="number" class="form-control border-0" id="change" readonly placeholder="Change"/>
+		 <git ls-files>
 		     </div>
 	     </div>
      </div>
