--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
   <div class="row">
     <div class="col-4 text-center">
       <label id="product1">Vanilla </label>
-      <img src="infinix40.jpeg" style="width:400px; height:500px;" class="img-thumbnail"/>
+      <img src="Vanilla.jpg" style="width:400px; height:500px;" class="img-thumbnail"/>
       <label for="product1" id="price1">10000.00</label>
       <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/>
     </div>
   
     <div class="col-4 text-center">
       <label id="product2">Vs Perfume </label>
-      <img src="infinix8.jpeg" style="width:400px; height:500px;" class="img-thumbnail"/>
+      <img src="Perfume.jpg" style="width:400px; height:500px;" class="img-thumbnail"/>
       <label for="product2" id="price2">5000.00</label>
       <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/>
     </div>
