--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
           <div class="container">
             <div class="row">
                 <div class="col-12 text-center">
-                  <h2>Maymay's SHOP</h2>
+                  <h2>Maymay's Vs Perfume SHOP</h2>
                   <hr class="hr" />
                 </div>
             </div>
@@ -20,7 +20,7 @@
           <div class="row">
 
                <div class="col-4 text-center">
-            <lable id="product1" >Vs Perfume</lable> b></lable>
+            <lable id="product1" >Vs Perfume</lable></lable>
              <img src="Perfume.jpg" class="img-thumbnail" style="width:400px; height:500px;" class="img-thumbnail"/> 
               <label for="product1" id="price1" >5000.00</label>   
               <input type="number" class="form-control" id="qty1" placeholder="ENTER QUANTITY"/>
@@ -40,13 +40,7 @@
               <label for="product5" id="price5" >7000.00</label>   
               <input type="number" class="form-control" id="qty5" placeholder="ENTER QUANTITY"/>
            </div>
-            
-            <div class="col-4 text-center">
-            <lable id="product4" >Velvet Petals Luxe </lable>
-             <img src="Velvet Petals Luxe.jpg" class="img-thumbnail" style="width:400px; height:500px;" class="img-thumbnail"/> 
-              <label for="product6" id="price6" >6000.00</label>   
-              <input type="number" class="form-control" id="qty6" placeholder="ENTER QUANTITY"/>
-           </div>
+
            <div class="col-4">
             <label for="carts"> Orders </label<br>
             <textarea class="form-control" rows="29" id="carts" cols="200" readonly style="width:350px;height: 400;font-size: 12px;"> </textarea>
